<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">MinRute</string>
    <string name="menu_settings">Indstillinger</string>
    <string name="alle_e">é</string>
    <string name="geocoding_service_not_available">Geocoding er ikke tilgængeligt</string>
    <string name="find_rute">Find rute</string>
    <string name="voice_is_not_installed">Stemmesupport er ikke installeret</string>
    <string name="confirm_install_voice">Vil du installere stemmesupport?</string>
    <string name="installed_voice">Slå stemmesupport er slået til</string>

   
    <string name="create_route">Opret rute</string>
    <string name="route_creation">Ruteoprettelse</string>
    <string name="trip_suggestions">Ruteforslag</string>
    <string name="trip_guide">Rutevejledning</string>
    <string name="trip_leg_details">Rutedetaljer</string>
    <string name="trip_stop_details_image">Rutestopbilleder</string>
    <string name="trip_stop_details">Rutestopdetaljer</string>
    <string name="waiting">Venter på data</string>
    <string name="start_end_must_not_be_equal">Start og slutadresse må ikke være ens</string>
    <string name="trip_request_not_valid">Ugyldigt forespørgsel</string>
    <string name="trip_request_enter_address">Du skal indtaste en <xliff:g ID="address_type">%1$s</xliff:g></string>
    <string name="startaddress">Startpunkt</string>
	<string name="destination_address">Slutpunkt</string>
    <string name="waypoint">Via stop/station</string>
    <string name="menu_show_waypoint">Vis/skjul viapunkt</string>
    <string name="waypoint_most_be_stop_or_station">Viapunkt skal være et stoppested eller en station</string>
    <string name="dialog_choose_location">Vælg placering</string>
	<string name="fake_stop_name">Stop før ankomst</string>

    <string name="current_location">Aktuel Placering</string>
    <string name="wait_for_location">Vent venligst..</string>
    <string name="contacts">Kontaktpersoner</string>
    <string name="location_on_map">Punkt på kortet</string>
    <string name="my_places">Mine steder</string>
    <string name="confirm_save_trip">Gem rute</string>
    <string name="enter_title">Indtast titel</string>
    <string name="enter_title_pls">Indtast venligst en titel</string>
    <string name="trip_saved">Rute gemt</string>
    <string name="trip_not_saved">Rute blev ikke gemt</string>
    <string name="no_saved_trips">Du har ingen gemte ruter</string>

	<string name="trip_request_address_not_valid"><xliff:g ID="address">%1$s</xliff:g> er ikke gyldig</string>
    <string name="trip_request_time_error">Kunne ikke sætte tid, prøv igen</string>
	
	<string name="from_origin_to_dest">Fra <xliff:g ID="address">%1$s</xliff:g>\nTil <xliff:g ID="address">%2$s</xliff:g></string>
    <string name="from_origin_via_to_dest">Fra <xliff:g ID="address">%1$s</xliff:g>\nVia <xliff:g ID="address">%2$s</xliff:g>\nTil <xliff:g ID="address">%3$s</xliff:g></string>
    
    <string name="tripleg_details_with">Med <xliff:g ID="transport">%1$s</xliff:g></string>
    <string name="tripleg_details_from">Fra <xliff:g ID="address">%1$s</xliff:g></string>
    <string name="tripleg_details_to">Til <xliff:g ID="address">%1$s</xliff:g></string>
    
    <string name="action_settings">Settings</string>
    <string name="title_section1">Ny rute</string>
    <string name="title_section2">Gemte ruter</string>
    <string name="menu_call_for_help">Ring til ven</string>
    <string name="save_trip">Gem rute</string>
    
    <string name="title_section_tripstop_details">Info</string>
    <string name="title_section_tripstop_images">Billeder</string>
    <string name="title_section_tripstop_departures">Afgangstavle</string>
    
    
    <string name="seconds">sekunder</string>
    <string name="minutes">minutter</string>
    <string name="hours">timer</string>
    <string name="days">dage</string>
    <string name="seconds_one">sekund</string>
    <string name="minutes_one">minut</string>
    <string name="hours_one">time</string>
    <string name="days_one">dag</string>
    <string name="departure1">Afgang</string>
    <string name="arrival">Ankomst</string>
    <string name="departure_now">Lige nu</string>
    <string name="departured">siden</string>
   
    

    <string name="departure">Afgang: <xliff:g ID="time_label">%1$s</xliff:g></string>
    <string name="parenthese_value">(<xliff:g ID="time_label">%1$s</xliff:g>)</string>
    <string name="arrival_within">Ankomst: <xliff:g ID="time_label">%1$s</xliff:g></string>
    <string name="duration"><xliff:g ID="time_label">%1$s</xliff:g></string>
	<string name="from">Fra <xliff:g ID="address">%1$s</xliff:g></string>
	<string name="to">Til <xliff:g ID="address">%1$s</xliff:g></string>
	<string name="transport_type_and_track_number"><xliff:g ID="transport_type">%1$s</xliff:g>, spor <xliff:g ID="track_number">%2$s</xliff:g></string>
	<string name="notes">Bemærkinger</string>
	<string name="map_mode">Se på kort</string>
	<string name="transport_type">Transporttype:</string>
	<string name="arrDateTime">Ankomst:</string>
	<string name="depDateTime">Afgang:</string>
	<string name="track">Spor:</string>
	<string name="rtArrTime">Ankomst(live tid):</string>
	<string name="rtDepTime">Afgang(live tid):</string>
	<string name="streetview">Street view</string>
	<string name="direction">Navigation</string>
	<string name="fetch_departure_board">Hent afgangstavle</string>
	<string name="transport_direction">Retning: <xliff:g ID="direction">%1$s</xliff:g></string>
	<string name="add_picture">Tilføj billede</string>
	<string name="upload_pictures">Upload billeder</string>
	<string name="uploading_pictures">Gemmer billeder på Google Drive</string>
	<string name="uploading_finished">Billeder uploaded</string>
	<string name="deleting_picture">Sletter billede</string>
	<string name="menu_delete_image">Slet billede</string>
	<string name="confirm_delete_image">Vil du slette billedet?</string>
	
	<string name="my_location">Min placering</string>
	<string name="leg_item_action_title">Vælg rutetrinhandling</string>
	<string name="leg_item_action_i_am_here">Jeg er her</string>
	<string name="leg_item_action_i_am_at_stop_before_dest">Jeg er ved stoppet før destination</string>
	<string name="leg_item_action_stop_details">Tilføj billeder</string>
	
	<string name="pref_images_big_key">pref_images_big_key</string>
	<string name="pref_images_big_title">Vis store billeder</string>
	
	

</resources>
